--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title></title>
+<title>Fish Creek Animal Clinic</title>
 <meta charset="utf-8">
 </head>
 <body>
-
+<header/>
+  <nav>
+    <b>
+      <a href="index.html">Home</a> &nbsp;
+      <a href="services.html">Services</a> &nbsp;
+      <a href="askvet.html">Ask the Vet</a> &nbsp;
+    </b>
+  </nav>
 </body>
 </html>
