--- a/askvet.html
+++ b/askvet.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title></title>
+<title>Fish Creek Animal Clinic: Ask the Vet</title>
 <meta charset="utf-8">
 </head>
 <body>
-
+<header>
+  <h1>Fish Creek Animal Clinic</h1>
+  </header>
+  <nav>
+    <b>
+      <a href="index.html">Home</a> &nbsp;
+      <a href="services.html">Services</a> &nbsp;
+      <a href="askvet.html">Ask the Vet</a> &nbsp;
+      <a href="contact.html">Contact</a>
+    </b>
+  </nav>
+  <main>Ask the Vet
+  </main>
+  <footer>
+    <small><i>Copyright &copy; 2020 Fish Creek Animal Clinic<br>
+      <a href="mailto:Jasmine@Leiva.com">Jasmine@Leiva.com</a>
+      </i></small>
+  </footer>
 </body>
 </html>
 
