--- a/services.html
+++ b/services.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title></title>
+<title>Fish Creek Animal Clinics Services</title>
 <meta charset="utf-8">
 </head>
 <body>
-
+<header>
+  <h1>Fish Creek Animal Clinic</h1>
+  <nav>
+    <b>
+      <a href="index.html.">Home</a> &nbsp;
+      <a href="services.html">Services</a> &nbsp;
+      <a href="askvet.html">Ask the Vet</a> &nbsp;
+      <a href="contact.html">Contact</a>
+    </b>
+  </nav>
 </body>
 </html>
 
