--- a/services.html
+++ b/services.html
@@ -15,6 +15,26 @@
       <a href="contact.html">Contact</a>
     </b>
   </nav>
+  <main>
+    <h2>Professional Services</h2>
+    <ul>
+      <li><strong>Medical Services</strong><br>
+        Our facility has the state-of-the-art equipment and technology.</li>
+      <li><strong>Surgical Services</strong><br>
+        We offer a full range of surgical procedures including orthopedics and emergency surgeries.</li>
+      <li><strong>Dental Care</strong><br>
+        A dental exam can determine whether your pet needs preventive dental care such as scaling and polishing.</li>
+      <li><strong>House Calls</strong><br>
+      The elderly, physically challenged, and multiple pet households often find our in-home veterinary service helpful and convenient.</li>
+      <li><strong>Emergencies</strong><br>
+        You can reach us at any time. At least one of our doctors is on call every day and night.</li>
+    </ul>
+  </main>
+  <footer>
+    <small><i>Copyright &copy; 2020 Fish Creek Animal Clinic<br>
+      <a href="mailto:Jasmine@Leiva.com>Jasmine@Leiva.com</a>
+               </i></small>
+               </footer>
 </body>
 </html>
 
