--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title></title>
+<title>Fish Creek Animal Clinic: Contact</title>
 <meta charset="utf-8">
 </head>
 <body>
 
-</body>
-</html>
-
+<header>
+  <h1>Fish Creek Animal Clinic</h1>
+</header>
+<nav>
+  <b>
+    <a href="index.html">Home</a> &nbsp;
+    <a href="services.html">Services</a> &nbsp;
+    <a href="Ask the Vet</a> &nbsp;
+             <a href="contact.html">Contact</a>
+                                   </b>
+                                   </nav>
+                                   <main>
+                                   <footer>
+                                   <small><i>Copyright &copy; 2020 Fish Creek Animal Clinic<br>
+                                   <a href="mailto:Jasmine@Leiva.com">Jasmine@Leiva.com</a>
+                                                                     </i></small>
+                                                                     </footer>
+                                                                     </body>
+                                                                     </html>
