--- a/index.html
+++ b/index.html
@@ -16,3 +16,28 @@
   </nav>
 </body>
 </html>
+<main>
+  <h2> Professional, Compassionate Care for your Pet</h2>
+  <p>The caring doctors and staff at Fish Creek Animal Clinic understand the special bond you share with you cherished pet.</p>
+  <dl>
+    <dt><strong>Years of Experience</strong></dt>
+    <dd> Fish Creek Veteranarians have provided personalized and compassionate care since 1984.</dd>
+    <dt><strong>Open Door Policy</strong></dt>
+    <dd>We welcome owners to stay with their pets during any medical procedure.</dd>
+    <dt><strong>Always Available</strong></dt>
+    <dd> Our professionals are on duty 24 hours a day, 7 days a week.</dd>
+  </dl>
+  <div>
+    Fish Creek Animal Clinic<br>
+    800-555-5555
+    12456 Grassy Lane<br>
+    Fish Creek,WI 55534<br><br>
+  </div>
+</main>
+<footer>
+  <small><i>Copyright &copy; 2020 Fish Creek Animal Clinic<br>
+    <a href-"mailto: Jasmine@Leiva.com"> Jasmine@Leiva.com</a>
+    </i></small>
+</footer>
+</body>
+</html>
