--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <b>
     <a href="index.html">Home</a> &nbsp;
     <a href="services.html">Services</a> &nbsp;
-    <a href="Ask the Vet</a> &nbsp;
+    <a href="Ask the Vet"</a> &nbsp;
              <a href="contact.html">Contact</a>
                                    </b>
                                    </nav>
